--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <li><a href="#">História</a></li>
         <li><a href="#">Sobre</a></li>
       </ul>
-      <a href="#" class="btn-voluntario">SEJA VOLUNTÁRIO</a>
+      <div>
+        <a href="#" class="btn-voluntario">SEJA VOLUNTÁRIO</a>
+      </div>
     </nav>
   </header>
 
