começo_do_cadastro

--- a/cad_ajuda.html
+++ b/cad_ajuda.html
@@ -7,6 +7,7 @@
   <title>BemMeQuero</title>
 
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/diminutivo.css">
 
 </head>
 <body>
@@ -28,35 +29,25 @@
         </ul>
       </div>
       <div class="divBtn">
-        <a href="cad_ajuda.html" class="btn-voluntario">SEJA VOLUNTÁRIO</a>
+        <a href="#" class="btn-voluntario">SEJA VOLUNTÁRIO</a>
       </div>
     </nav>
   </header>
 
  
    <main style="padding-top: 70px;">
-    <!-- BANNER -->
-    <section>
-        <img src="img/Banner.png" class="banner" alt="Banner da Empresa">
-    </section>
-
-    <section id="sec1">
-        <div class="quem-somos">
-            <div class="card-quem-somos">
-                <div class="imagem">
-                <img src="img/ImgLogo2.png" alt="Logo BemMeQuero">
-                </div>
-                <div class="texto">
-                <h2>Quem Somos Nós</h2>
-                <p>
-                    Somos um grupo dedicado a promover bem-estar emocional, autocuidado e apoio 
-                    através de projetos que conectam pessoas. Nosso objetivo é criar espaços 
-                    de acolhimento e informação, incentivando práticas que valorizem a saúde mental 
-                    e o desenvolvimento pessoal.
-                </p>
-                </div>
+    <section class="containinho">
+        <aside class="esquerdinha"></aside>
+        <section class="conteudinho">
+            <div class="caixinha">
+                <h2>Formulário para voluntários</h2>
+                <form action="">
+                    <label for="">Nome</label>
+                    <input type="text">
+                </form>
             </div>
-        </div>
+        </section>
+        <aside class="direitinha"></aside>
     </section>
    </main>
   
