--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,7 @@
   <title>BemMeQuero</title>
 
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/diminutivo.css">
   <link rel="icon" href="img/ImgLogo2.png">
 
 </head>
@@ -29,14 +30,16 @@
           <li><a href="comofunc.html">Como Funciona</a></li>
           <li><a href="profissionais.html">Profissionais</a></li>
           <li><a href="blogart.html">Artigos</a></li>
-          <li><a href="historia.html">História</a></li>
+                   <li><a href="historia.html">História</a></li>
+
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="desenvolvedores.html">Desenvolvedores</a></li>
         </ul>
       </div>
       <div class="divBtn">
-        <div class="bord-btn">
-          <a href="cad_volunt.html" class="btn-voluntario">SEJA VOLUNTÁRIO</a>
+        <div class="divinha-pessoinha">
+          <img src="img/pessoa1.png" alt="" class="pessoinha">
+          <p>Nome da pessoa</p>
         </div>
       </div>
     </nav>
@@ -63,61 +66,32 @@
                     de acolhimento e informação, incentivando práticas que valorizem a saúde mental 
                     e o desenvolvimento pessoal.
                 </p>
-                <br>
-                <a href="sobre.html" class="btn-saiba">Saiba mais</a>
                 </div>
             </div>
         </div>
-        
     </section>
-    <img src="img/fundo2.png" alt="Imagem separador">
-        <section id="sec1">
+    <section id="sec1">
         <div class="quem-somos">
             <div class="card-quem-somos">
                 <div class="imagem">
-                <img src="img/19.png" alt="Logo BemMeQuero">
+                <img src="img/ImgLogo2.png" alt="Logo BemMeQuero">
                 </div>
                 <div class="texto">
-                <h2>História</h2>
+                <h2>Quem Somos Nós</h2>
                 <p>
-                        A proposta inicial foi simples: criar uma organização dedicada ao
-                        bem-estar, com foco em promover equilíbrio emocional e qualidade de vida. Desde o início, a
-                        ideia foi estruturar um espaço tanto físico quanto digital em que profissionais qualificados
-                        pudessem oferecer suporte.
+                    Somos um grupo dedicado a promover bem-estar emocional, autocuidado e apoio 
+                    através de projetos que conectam pessoas. Nosso objetivo é criar espaços 
+                    de acolhimento e informação, incentivando práticas que valorizem a saúde mental 
+                    e o desenvolvimento pessoal.
                 </p>
-                <br>
-                <a href="historia.html" class="btn-saiba">Saiba mais</a>
                 </div>
             </div>
         </div>
     </section>
-
-     </section>
-    <img src="img/fundo2.png" alt="Imagem separador">
-        <section id="sec1">
-        <div class="quem-somos">
-            <div class="card-quem-somos">
-                <div class="texto">
-                <h2>Conheça nossos profissionais</h2>
-                <div class="imagem2">
-                <img src="img/psi1.png" alt="Logo BemMeQuero">
-                <img src="img/psi2.png" alt="Logo BemMeQuero">
-                <img src="img/psi3.png" alt="Logo BemMeQuero">
-                </div>
-                <p>
-                    Nossa equipe é formada por profissionais qualificados e dedicados, 
-                    preparados para oferecer suporte em diversas áreas do bem-estar e 
-                    qualidade de vida. Venha conhecer mais sobre quem faz parte desse time!
-                </p>
-                <br>
-                <a href="profissionais.html" class="btn-saiba">Saiba mais</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
    </main>
   
+<!-- FOOTER -->
+
 <!-- FOOTER -->
 
 <footer class="footer">
@@ -140,9 +114,6 @@
 
   </div>
 </footer>
-
-
-
 
 </body>
 </html>
