--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         
     </section>
-    <img src="img/fundo2.png" alt="Imagem separador">
+    <div id="separador"></div>
         <section id="sec1">
         <div class="quem-somos">
             <div class="card-quem-somos">
@@ -92,8 +92,7 @@
         </div>
     </section>
 
-     </section>
-    <img src="img/fundo2.png" alt="Imagem separador">
+    <div id="separador"></div>
         <section id="sec1">
         <div class="quem-somos">
             <div class="card-quem-somos">
